# njupt_smartclass_downloader

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/njupt_smartclass_downloader/: __main__.py  app.py  app_task.py  njupt_smartclass.py  njupt_sso.py
src/njupt_smartclass_downloader/screens/: download_options_modal.py  login_screen.py  progress_screen.py  search_input_modal.py  search_screen.py
src/njupt_smartclass_downloader/slides_extractor/: extractor.py  mode_frame.py  significant_frame.py
src/njupt_smartclass_downloader/styles/: app.tcss  download-options-modal.tcss  login.tcss  progress.tcss  search-input-modal.tcss  search.tcss
src/njupt_smartclass_downloader/widgets/: task_list_item.py  video_list_item.py
